force-app/main/default/objects/SBQQ__QuoteLine__c/fields/itemState__c.field-meta.xml
<CustomField>
    <fullName>itemState__c</fullName>
    <label>itemState</label>
    <length>150</length>
    <type>Text</type>
</CustomField>