force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Thales_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Thales_Licensing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thales Licensing</label>
    <type>Checkbox</type>
</CustomField>